fix svg icons path, adjust responsive spacing for about section

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -2,13 +2,17 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  margin-bottom: 40px;
+}
+.title {
+  margin-bottom: 0;
 }
 .description {
-  max-width: 530px;
-
   font-size: 20px;
   line-height: 1.5;
   color: #000;
+
+  /* flex-basis: 534px; */
 }
 .featuresList {
   display: grid;
@@ -34,6 +38,10 @@
 }
 .icon {
   font-size: 32px;
+  width: 48px;
+  height: 48px;
+  fill: #111;
+  margin-bottom: 16px;
 }
 .featureText {
   font-family: 'Nunito Sans', sans-serif;
@@ -43,37 +51,13 @@
   color: #000;
 }
 
-@media (min-width: 1440px) {
-  .section {
-    padding: 80px 0;
-  }
-
-  .topContent {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-
-  .title {
-    font-size: 48px;
-    max-width: 550px;
-  }
-
-  .description {
-    max-width: 450px;
-  }
-
-  .featuresList {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
 @media (min-width: 768px) {
   .topContent {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 40px;
-    margin-bottom: 60px;
+    gap: 40xp;
+    margin-bottom: 64px;
   }
 
   .title {
@@ -83,6 +67,33 @@
 
   .description {
     flex: 1;
+  }
+
+  .featuresList {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+  }
+}
+@media (min-width: 1440px) {
+  .section {
+    padding: 80px 0;
+  }
+
+  .topContent {
+    gap: 24px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 60px;
+  }
+
+  .title {
+    font-size: 48px;
+    max-width: 755px;
+  }
+
+  .description {
+    max-width: 534px;
   }
 
   .featuresList {
